--- a/src/index.html
+++ b/src/index.html
@@ -7,15 +7,8 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" type="image/x-icon" href="favicon.png">
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-	rel="stylesheet">
-<script
-	src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
-<link
-	href="node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
-	rel="stylesheet">
 </head>
-<body class="mat-app-background ">
+<body>
 	<app-root></app-root>
 </body>
 </html>
